<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_page"
    android:background="@color/white">
    <TextView
        android:id="@+id/line1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="32dp"
        android:text="LOG IN"
        android:textColor="#FF000000"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/login_video"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <VideoView
        android:id="@+id/login_video"
        android:layout_width="412dp"
        android:layout_height="280dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line1" />

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/user_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_video"
        app:tint="@color/black" />

    <ImageView
        android:id="@+id/password_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_outline_lock_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_image"
        app:tint="@color/black" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="36dp"
        android:hint="@string/email_phone_no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/user_image"
        app:layout_constraintTop_toBottomOf="@id/login_video"
        app:tint="@color/black" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="36dp"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/password_image"
        app:layout_constraintStart_toStartOf="@id/password_image"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:tint="@color/black" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/see_pass"
        app:layout_constraintLeft_toRightOf="@id/user_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_video" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#605D5D"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_password" />
    <VideoView
        android:id="@+id/done_video"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass"
        app:layout_constraintBottom_toTopOf="@id/google_login"
        />
    <Button
        android:id="@+id/login_button"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/log_in"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_pass" />
    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signup"
        android:text="@string/don_t_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_now"
        android:onClick="signup_activity"
        android:textColor="#ff008577"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@id/signup_text"
        app:layout_constraintTop_toBottomOf="@id/login_button" />
    <ImageView
        android:id="@+id/google_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:onClick="google_signIn"
        android:layout_height="wrap_content"
        android:src="@drawable/google_signin"
        app:layout_constraintTop_toBottomOf="@id/signup_text"
        app:layout_constraintBottom_toTopOf="@id/apple_login"/>
    <ImageView
        android:id="@+id/apple_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/apple_signin"
        android:onClick="apple_signIn"
        app:layout_constraintTop_toBottomOf="@id/google_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>