<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ChatbotFragment">

    <LinearLayout
        android:id="@+id/ll_layout_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/round_button"
            android:backgroundTint="#E4DEDE"
            android:hint="@string/type_a_message"
            android:inputType="textShortMessage"
            android:padding="11dp"
            android:singleLine="true" />

        <ImageButton
            android:id="@+id/btn_send"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="2dp"
            android:background="@drawable/round_button"
            android:backgroundTint="#0BE314"
            android:src="@drawable/ic_send"
            android:text="@string/send"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_messages"
        android:layout_width="410dp"
        android:layout_height="601dp"
        android:layout_above="@id/ll_layout_bar"
        app:layout_constraintBottom_toTopOf="@id/ll_layout_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reyana"
        tools:itemCount="20"
        tools:listitem="@layout/message_item" />

    <TextView
        android:id="@+id/reyana"
        android:layout_width="132dp"
        android:layout_height="63dp"
        android:text="@string/reyana"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/rv_messages"
        app:layout_constraintLeft_toLeftOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>